# django-system-template

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
nginx/: Dockerfile  nginx.conf
src/app/: views.py
src/apps/main/: context_processors.py  urls.py  views.py
src/core/: settings.py  urls.py
src/core/templates/: base.html  skeleton.html
src/core/templates/errors/: 400.html  403.html  404.html  500.html
src/core/templates/registration/: login.html
src/templates/main/: index.html
src/theme/static_src/: package-lock.json  package.json
