[tool.poetry]
name = "django-system-template"
version = "0.0.0"
description = ""
authors = ["Glenn <glenn@not-tech.support>"]
license = "MIT"
readme = "docs/README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.1"
django = "5.1.4"
gunicorn = "23.0.0"
django-guardian = "2.4.0"
pyjwt = "2.10.1"
psycopg2-binary = "2.9.10"
fontawesomefree = "6.6.0"
django-google-fonts = "0.0.3"
django-tailwind = {extras = ["reload"], version = "3.8.0"}
crispy-tailwind = "1.0.3"
django-crispy-forms = "2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
