[tool.poetry]
name = "django-system-template"
version = "0.0.0"
description = ""
authors = ["Glenn <glenn@not-tech.support>"]
license = "MIT"
readme = "docs/README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.14.3"
django = "5.2.11"
gunicorn = "25.0.3"
django-guardian = "3.2.0"
pyjwt = "2.10.1"
psycopg2-binary = "2.9.11"
fontawesomefree = "6.6.0"
django-google-fonts = "0.0.3"
django-tailwind = {extras = ["reload"], version = "4.4.2"}
crispy-tailwind = "1.0.3"
django-crispy-forms = "2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
